tests/machine/x/hs/json_builtin.error

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:137:48: error:
    Not in scope: ‘V.toList’
    NB: no module named ‘V’ is imported.
    |
137 |     Just (Aeson.Array arr) -> map _valueToMap (V.toList arr)
    |                                                ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:143:18: error:
    Not in scope: ‘T.unpack’
    NB: no module named ‘T’ is imported.
    |
143 |   Map.fromList [(T.unpack (Key.toText k), _valueToString v) | (k, v) <- KeyMap.toList o]
    |                  ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:143:28: error:
    Not in scope: ‘Key.toText’
    NB: no module named ‘Key’ is imported.
    |
143 |   Map.fromList [(T.unpack (Key.toText k), _valueToString v) | (k, v) <- KeyMap.toList o]
    |                            ^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:143:73: error:
    Not in scope: ‘KeyMap.toList’
    NB: no module named ‘KeyMap’ is imported.
    Suggested fix: Perhaps use ‘Map.toList’ (imported from Data.Map)
    |
143 |   Map.fromList [(T.unpack (Key.toText k), _valueToString v) | (k, v) <- KeyMap.toList o]
    |                                                                         ^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:147:35: error:
    Not in scope: ‘T.unpack’
    NB: no module named ‘T’ is imported.
    |
147 | _valueToString (Aeson.String s) = T.unpack s
    |                                   ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:154:18: error:
    Not in scope: ‘KeyMap.fromList’
    NB: no module named ‘KeyMap’ is imported.
    Suggested fix: Perhaps use ‘Map.fromList’ (imported from Data.Map)
    |
154 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                  ^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:154:36: error:
    Not in scope: ‘Key.fromString’
    NB: no module named ‘Key’ is imported.
    |
154 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                                    ^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:154:68: error:
    Not in scope: ‘T.pack’
    NB: no module named ‘T’ is imported.
    |
154 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                                                                    ^^^^^^

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:170:74: error:
    Not in scope: ‘V.fromList’
    NB: no module named ‘V’ is imported.
    Suggested fix: Perhaps use ‘Map.fromList’ (imported from Data.Map)
    |
170 |               val = if length objs == 1 then head objs else Aeson.Array (V.fromList objs)
    |                                                                          ^^^^^^^^^^


Context around line 137:
  135| _parseJSON text =
  136|   case Aeson.decode (BSL.pack text) of
  137|     Just (Aeson.Array arr) -> map _valueToMap (V.toList arr)
  138|     Just v -> [_valueToMap v]
  139|     Nothing -> []
